Fix swiper pagination overlap

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -274,6 +274,10 @@ section, div.section {
 }
 
 .customers-swiper .swiper-pagination {
+  position: relative;
+  bottom: auto;
+  top: auto;
+  text-align: center;
   margin-bottom: 20px;
 }
 
